test/compile_failure/32_invalid_type_combination.c
// EXPECT-ERRORS: 1
// EXPECT: invalid type specifier combination
unsigned float value;
